@@ -2706,11 +2706,11 @@ esac
 AC_DEFINE_UNQUOTED(LIBRARY_PATH,"$DEFINE_LIBRARY_PATH",Directory where architecture-dependent files live.)
 AC_SUBST(LIBRARY_PATH)
 
-# Subdirectory under lib to place ImageMagick configuration files
-CONFIGURE_RELATIVE_PATH="${LIBRARY_RELATIVE_PATH}/config"
+# Subdirectory to place ImageMagick configuration files
+CONFIGURE_RELATIVE_PATH="${LIBRARY_RELATIVE_PATH}"
 AC_DEFINE_UNQUOTED(CONFIGURE_RELATIVE_PATH,"$CONFIGURE_RELATIVE_PATH",Subdirectory of lib where architecture-dependent configuration files live.)
-CONFIGURE_PATH="${LIB_DIR}/${CONFIGURE_RELATIVE_PATH}/"
-DEFINE_CONFIGURE_PATH="${LIB_DIR}/${CONFIGURE_RELATIVE_PATH}/"
+CONFIGURE_PATH="${LOCALSTATE_DIR}/${CONFIGURE_RELATIVE_PATH}/"
+DEFINE_CONFIGURE_PATH="${LOCALSTATE_DIR}/${CONFIGURE_RELATIVE_PATH}/"
 case "${build_os}" in
   mingw* )
     DEFINE_CONFIGURE_PATH=`$WinPathScript "$DEFINE_CONFIGURE_PATH" 1`
@@ -2773,11 +2773,11 @@ esac
 AC_DEFINE_UNQUOTED(SHARE_PATH,"$DEFINE_SHARE_PATH",Directory where architecture-independent files live.)
 AC_SUBST(SHARE_PATH)
 
-# Subdirectory under share to place ImageMagick configuration files
-SHARE_CONFIGURE_RELATIVE_PATH="${LIBRARY_RELATIVE_PATH}/config"
+# Subdirectory to place ImageMagick configuration files
+SHARE_CONFIGURE_RELATIVE_PATH="${LIBRARY_RELATIVE_PATH}"
 AC_DEFINE_UNQUOTED(SHARE_CONFIGURE_RELATIVE_PATH,"$SHARE_CONFIGURE_RELATIVE_PATH",Subdirectory of lib where architecture-independent configuration files live.)
-SHARE_CONFIGURE_PATH="${DATA_DIR}/${SHARE_CONFIGURE_RELATIVE_PATH}"
-DEFINE_SHARE_CONFIGURE_PATH="${DATA_DIR}/${SHARE_CONFIGURE_RELATIVE_PATH}/"
+SHARE_CONFIGURE_PATH="${SYSCONF_DIR}/${SHARE_CONFIGURE_RELATIVE_PATH}"
+DEFINE_SHARE_CONFIGURE_PATH="${SYSCONF_DIR}/${SHARE_CONFIGURE_RELATIVE_PATH}/"
 case "${build_os}" in
   mingw* )
     DEFINE_SHARE_CONFIGURE_PATH=`$WinPathScript "$DEFINE_SHARE_CONFIGURE_PATH" 1`
