@@ -108,6 +108,14 @@ Image Operators:
 Image Sequence Operators:
   \-coalesce            merge a sequence of images
 
+Image Stack Operators:
+  \-clone index         clone an image
+  \-delete index        delete the image from the image sequence
+  \-duplicate index count
+                       duplicate an image one or more times
+  \-insert index        insert last image into the image sequence
+  \-swap indexes        swap two images in the image sequence
+
 Miscellaneous Options:
   \-debug events        display copious debugging information
   \-help                print program options
